Trying level for About Us contributors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,6 @@
   <body>
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <!-- <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}">
-          <img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" />
-          <span>Baseball The Way It Was Meant To Be</span>
-        </a> -->
-    
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -82,19 +77,21 @@
         </div>
       </div>
     </nav>
+
     <section>
       <div class="columns index-main">
-        <div class="column is-one-quarter index-menu">
+        <div class="column is-one-fifth index-menu">
           <div class="index-masthead">
             <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
             <p class="is-size-7">Baseball The Way It Was Meant To Be</p>
           </div>
         </div>
-        <div class="column is-three-quarters container" id="content" >
+        <div class="column is-four-fifths container" id="content" >
           {{ content }}
         </div>
       </div>
     </section>
+
   </body>
   <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/scripts/bulma.js"></script>
 </html>
