More tweaks to About Us contributors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,12 +81,12 @@
     <section>
       <div class="columns index-main">
         <div class="column is-one-fifth index-menu">
-          <div class="index-masthead">
+          <div class="index-masthead has-text-centered">
             <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
             <p class="is-size-7">Baseball The Way It Was Meant To Be</p>
           </div>
         </div>
-        <div class="column is-four-fifths container" id="content" >
+        <div class="column is-four-fifths container" id="content">
           {{ content }}
         </div>
       </div>
