--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,3 @@
-div.aligncenter, .aligncenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.alignleft {
-  float: left;
-}
-
-.alignright {
-  float: right;
-}
-
 a, a:hover {
   color: navy;
 }
@@ -44,13 +30,6 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 150%;
-}
-
-.about-us-contributor {
-  display: inline-block;
-  height: 50px;
-  line-height: 50px;
-  padding: .5rem;
 }
 
 .avg-war [type="text"] { 
@@ -125,9 +104,7 @@ h1 {
 }
 
 .index-masthead {
-  font-size: smaller;
-  margin: 6px auto;
-  text-align: center;
+  margin-top: 6px;
 }
 
 .index-menu {
