More styling for All-Star State Teams

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,11 +32,11 @@ h1 {
   font-size: 150%;
 }
 
-.all-star-state-teams table, th, td {
-  border: 0px;
+.all-star-state-teams > table, th, td {
+  border: none;
 }
 
-.all-star-state-teams th, td {
+.all-star-state-teams > th, td {
   padding: 3px;
 }
 
