Styling for unordered lists

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,11 @@ h1 {
   font-size: 150%;
 }
 
+ul {
+  list-style-type: disc;
+  list-style-position: inside;
+}
+
 .all-star-state-teams th, td {
   padding: 3px;
 }
