Adding AvgWar and Pro/Rel pages to nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,56 @@
               </a>
             </div>
           </div>
-      
-          <a href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/avg-war.html" class="navbar-item">
-            Average WAR
-          </a>
-          <a href="{{ site.url }}{{ site.baseurl }}/pages/pro-rel/promotion-relegation.html" class="navbar-item">
-            Promotion/Relegation
-          </a>
+
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Average WAR
+            </a>
+            <div class="navbar-dropdown">
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/avg-war.html">
+                AvgWAR Explained
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2018-hall-of-fame-candidates.html">
+                AvgWAR for 2018 Hall of Fame Candidates
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2017-hall-of-fame-candidates.html">
+                AvgWAR for 2017 Hall of Fame Candidates
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2016-hall-of-fame-candidates.html">
+                AvgWAR for 2016 Hall of Fame Candidates
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2015-hall-of-fame-candidates.html">
+                AvgWAR for 2015 Hall of Fame Candidates
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2014-hall-of-fame-candidates.html">
+                AvgWAR for 2014 Hall of Fame Candidates
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2013-hall-of-fame-candidates.html">
+                AvgWAR for 2013 Hall of Fame Candidates
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2012-hall-of-fame-candidates.html">
+                AvgWAR for 2012 Hall of Fame Candidates
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/lenny-harris-for-hall-of-fame-huh.html">
+                Lenny Harris for Hall of Fame...huh?
+              </a>
+            </div>
+          </div>
+  
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+                Promotion/Relegation
+            </a>
+            <div class="navbar-dropdown">
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/pro-rel/promotion-relegation.html">
+                Promotion/Relegation Tables
+              </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/pro-rel/introducing-promotion-and-relegation-to-professional-baseball.html">
+                Introducing Promotion and Relegation to Professional Baseball
+              </a>
+            </div>
+          </div>
+  
           <a href="{{ site.url }}{{ site.baseurl }}/pages/limericks/baseball-limericks.html" class="navbar-item">
             Limericks
           </a>
