Breadcrumbs for Promotion/Relegation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@
               <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/about-us.html">
                 About Baseball Ink
               </a>
-              <a class="navbar-item" href="https://github.com/jaypalexa/baseballink" title="GitHub" target="_blank">
+              <a class="navbar-item" href="https://github.com/jaypalexa/baseballink" title="GitHub">
                 GitHub
               </a>
             </div>
