--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,10 @@
   <body>
     <nav class="navbar is-dark" aria-label="main navigation">
       <div class="navbar-brand">
+        <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}">
+          Baseball Ink
+        </a>
+        
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
