--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head class="has-navbar-fixed-top">
     <title>Baseball Ink</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/favicon.ico">
   </head>
   <body>
-    <nav class="navbar is-dark" aria-label="main navigation">
+    <nav class="navbar is-fixed-top is-dark" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}">
           Baseball Ink
@@ -28,7 +28,7 @@
             Home
           </a>
     
-          <div class="navbar-item has-dropdown is-hoverable">
+          <div class="navbar-item has-dropdown">
             <a class="navbar-link">
               Magazine
             </a>
@@ -54,7 +54,7 @@
             </div>
           </div>
 
-          <div class="navbar-item has-dropdown is-hoverable">
+          <div class="navbar-item has-dropdown">
             <a class="navbar-link">
               Average WAR
             </a>
@@ -89,7 +89,7 @@
             </div>
           </div>
   
-          <div class="navbar-item has-dropdown is-hoverable">
+          <div class="navbar-item has-dropdown">
             <a class="navbar-link">
               Promotion/Relegation
             </a>
@@ -107,7 +107,7 @@
             Limericks
           </a>
     
-          <div class="navbar-item has-dropdown is-hoverable">
+          <div class="navbar-item has-dropdown">
             <a class="navbar-link">
               More
             </a>
