--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             Home
           </a>
     
-          <div class="navbar-item has-dropdown" id="dropdown-magazine">
+          <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
               Magazine
             </a>
@@ -54,7 +54,7 @@
             </div>
           </div>
 
-          <div class="navbar-item has-dropdown">
+          <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
               Average WAR
             </a>
@@ -89,7 +89,7 @@
             </div>
           </div>
   
-          <div class="navbar-item has-dropdown">
+          <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
               Promotion/Relegation
             </a>
@@ -107,7 +107,7 @@
             Limericks
           </a>
     
-          <div class="navbar-item has-dropdown">
+          <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
               More
             </a>
