Vol 1 No 2 - Kitty League Baseball image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,6 +112,12 @@ ul {
   padding-right: 1rem;
 }
 
+.image-left {
+  float: left;
+  margin-bottom: 6px;
+  margin-right: 6px;
+}
+
 .index-main {
   min-height: 100vh;
 }
