--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,8 +15,10 @@ a img {
 }
 
 blockquote {
-  position: relative;
+  font-style: italic;
+  opacity: .70;
   padding-left: 1em;
+  position: relative;
 }
 
 body {
