--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,6 @@
-a {
-  font-weight: bolder;
-}
-
-a, a:hover {
+/* a, a:hover {
   color: navy;
-}
+} */
 
 a:hover {
   text-decoration: underline;
