--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,10 @@ h1 {
   font-size: 150%;
 }
 
+ol {
+  list-style-position: inside;
+}
+
 ul {
   list-style-type: disc;
   list-style-position: inside;
@@ -184,6 +188,11 @@ ul {
 .pro-rel-table-standings-header {
   background-color: lightgray;
   font-weight: bold;
+}
+
+.runner-on-first {
+  font-family: Courier;
+  width: 570px;
 }
 
 .storycontent p {
