--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,7 +128,7 @@
     <div class="columns index-main">
       <div class="column is-one-fifth index-menu">
         <div class="index-masthead has-text-centered">
-          <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" /></a>
+          <a href="{{ site.url }}{{ site.baseurl }}" title="Baseball Ink"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/bi_logo_xsm.gif" width="200" height="71" alt="Baseball Ink" title="Baseball Ink" /></a>
           <p class="is-size-7">Baseball The Way It Was Meant To Be</p>
         </div>
       </div>
