--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,9 @@
               <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/avg-war.html">
                 AvgWAR Explained
               </a>
+              <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2023-hall-of-fame-candidates.html">
+                AvgWAR for 2023 Hall of Fame Candidates
+              </a>
               <a class="navbar-item" href="{{ site.url }}{{ site.baseurl }}/pages/avg-war/average-war-for-2022-hall-of-fame-candidates.html">
                 AvgWAR for 2022 Hall of Fame Candidates
               </a>
